--- a/Web/main/main.css
+++ b/Web/main/main.css
@@ -2,22 +2,13 @@ body {
     font-size: .875rem;
   }
   
-  .feather {
-    width: 16px;
-    height: 16px;
-    vertical-align: text-bottom;
-    
-  }
-  
-
-  
   .sidebar {
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     z-index: 100; /* Behind the navbar */
-    padding: 48px 0 0; /* Height of navbar */
+    padding: 41px 0 0; /* Height of navbar */
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
   }
   
@@ -38,58 +29,18 @@ body {
   
   .sidebar .nav-link {
     font-weight: 500;
-    color: #333;
+    color:white;
   }
   
-  .sidebar .nav-link .feather {
-    margin-right: 4px;
-    color: #727272;
+  .sidebar .nav-link:hover{
+    color:#EEB500 ;
   }
-  
-  .sidebar .nav-link.active {
-    color: #2470dc;
-  }
-  
-  .sidebar .nav-link:hover .feather,
-  .sidebar .nav-link.active .feather {
-    color: inherit;
-  }
-  
-  .sidebar-heading {
-    font-size: .75rem;
-    text-transform: uppercase;
-  }
-  
- .logout{
-     color: #EEB500;
+   
+.logout{
      background-color:#EEB500 ;
  }
-  .navbar-brand {
-    padding-top: .75rem;
-    padding-bottom: .75rem;
-    font-size: 1rem;
-    background-color: rgba(0, 0, 0, .25);
-    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
-  }
-  
-  .navbar .navbar-toggler {
-    top: .25rem;
-    right: 1rem;
-  }
-  
-  .navbar .form-control {
-    padding: .75rem 1rem;
-    border-width: 0;
-    border-radius: 0;
-  }
-  
-  .form-control-dark {
-    color: #fff;
-    background-color: rgba(255, 255, 255, .1);
-    border-color: rgba(255, 255, 255, .1);
-  }
-  
-  .form-control-dark:focus {
-    border-color: transparent;
-    box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
-  }
+ .logout:hover{
+   background-color:goldenrod;
+ }
+
+
