add corp_list layout

--- a/Web/corporation/corporation.css
+++ b/Web/corporation/corporation.css
@@ -23,5 +23,9 @@
 
 /* corp_list.php */
 .search {
-    display: inline-block;
+    float: right;
+    display: block;
+}
+.new-btn {
+    float: right;
 }
