modify login_left color

--- a/Web/auth/auth.css
+++ b/Web/auth/auth.css
@@ -13,10 +13,9 @@
 .login_left {
     width: 400px;
     height: 400px;
-    background-color: #405064;
+    background-color: #343a40;
     text-align: center;
     color: white;
-
 }
 .login_right {
     width: 400px;
