--- a/Web/chat/chat_room.css
+++ b/Web/chat/chat_room.css
@@ -1,9 +1,3 @@
-html,body{
-    height:100%;
-}
-header{
-    height:6%;
-}
 .inner{
     height:800px;
     background-color: rgb(226, 223, 223);
@@ -46,7 +40,7 @@ header{
 .item .box .msg {border:solid gold; border-radius:10px; padding:8px; text-align:left}
 .item .box .time {font-size:11px; color:#999; position:absolute; right: -75px; bottom:5px; width:70px}
 .item.mymsg{text-align:right}
-.item.mymsg .box::before{left:auto; right:-8px; border-left:8px solid #fee600; border-right:0;}
+/* .item.mymsg .box::before{left:auto; right:-5px; border-left:8px solid #fee600; border-right:0;} */
 .item.mymsg .box .msg{border:solid darkblue}
 .item.mymsg .box .time{right:auto; left:-75px}
  /* .item .box{transition:all .3s ease-out; margin:0 0 0 20px;opacity:0}
