--- a/Web/src/main/resources/templates/auth/auth.html
+++ b/Web/src/main/resources/templates/auth/auth.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel ="stylesheet" href="auth.css?after">
+    <link rel ="stylesheet" th:href="@{/css/auth.css}">
     <title>login</title>
 </head>
 <script>
@@ -34,7 +34,7 @@
 <div class="login">
     <div class="login_left" >
         <br><br>
-        <img src="../resources/client.svg" alt="" width="210px">
+        <img th:src="@{/images/client.svg}" alt="" width="210px">
         <br><br>
         <h5><b>Welcome to Fast Response.</b></h5>
         <h5>This is Fast Response manager page.</h5>
@@ -45,7 +45,10 @@
         <br>
         <div class="login_form">
             <!-- 로그인 form -->
-            <form name="login_form" method="get" action="./auth_ok.php" onsubmit="return form_login_chk(this);">
+            <form name="login_form"
+                  th:action
+                  method="post"
+                  onsubmit="return form_login_chk(this);">
                 <input class="form-control" name="login_id" type="text" placeholder="아이디">
                 <br>
                 <input class="form-control" name="login_pw" type="password" placeholder="비밀번호">
