--- a/Web/src/main/resources/templates/corporation/corp_list.html
+++ b/Web/src/main/resources/templates/corporation/corp_list.html
@@ -21,13 +21,13 @@
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
             integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
             crossorigin="anonymous"></script>
-    <script th:src="@{/js/includeHTML.js}"></script>
     <link rel="stylesheet" th:href="@{/css/nav.css}">
     <link rel="stylesheet" th:href="@{/css/corporation.css}">
     <title>corporation</title>
 </head>
 <body>
-<nav include-html="../nav/nav.html"></nav>
+<div th:replace="menu/header::header"></div>
+<div th:replace="menu/nav::nav"></div>
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 wrapper">
     <div class="pt-3 pb-2 mb-3 border-bottom">
         <h3 style="text-align:left;">기업목록</h3>
@@ -197,7 +197,4 @@
     </div>
 </main>
 </body>
-<script>
-    includeHTML();
-</script>
 </html>
