corporation db setting

--- a/Web/src/main/resources/templates/corporation/corp_list.html
+++ b/Web/src/main/resources/templates/corporation/corp_list.html
@@ -103,7 +103,8 @@
                     </li>
                 </ul>
             </nav>
-            <button type="submit" class="btn btn-warning btn-sm px-4 new-btn">등록하기</button>
+            <button type="submit" class="btn btn-warning btn-sm px-4 new-btn"
+                    th:onclick="|location.href='@{/corporation/add}'|">등록하기</button>
         </div>
 
     </div>
