--- a/Web/src/main/resources/templates/menu/nav.html
+++ b/Web/src/main/resources/templates/menu/nav.html
@@ -15,13 +15,13 @@
                         </a>
                     </li>
                     <li class="nav-item mb-3">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="#" th:onclick="|location.href='@{/counselor}'|">
                             <img src="../../static/images/counselor.svg" th:src="@{/images/counselor.svg}" alt="" width="25px">
                             상담원관리
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="#"th:onclick="|location.href='@{/client}'|">
                             <img src="../../static/images/client.svg" th:src="@{/images/client.svg}" alt="" width="25px">
                             고객관리
                         </a>
