--- a/Web/src/main/resources/templates/auth/auth.html
+++ b/Web/src/main/resources/templates/auth/auth.html
@@ -8,28 +8,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel ="stylesheet" th:href="@{/css/auth.css}">
+    <script type="text/javascript" th:src="@{/js/auth.js}"></script>
     <title>login</title>
 </head>
-<script>
-    function form_login_chk(form) {
-        var login_id = form.login_id;
-        var login_pw = form.login_pw;
-
-        // 아이디 입력 유뮤 체크
-        if(!login_id.value) {
-            alert('아이디를 입력하세요.');
-            login_id.focus();
-            return false;
-        }
-
-        // 비밀번호 입력 유무 체크
-        if (!login_pw.value) {
-            alert('비밀번호를 입력하세요');
-            login_pw.focus();
-            return false;
-        }
-    }
-</script>
 <body>
 <div class="login">
     <div class="login_left" >
