--- a/Web/src/main/resources/templates/corporation/corp_new.html
+++ b/Web/src/main/resources/templates/corporation/corp_new.html
@@ -6,21 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap core CSS -->
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-            crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-            integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-            crossorigin="anonymous"></script>
-    <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" th:src="@{/js/corp_new.js}"></script>
     <link rel="stylesheet" th:href="@{/css/nav.css}">
     <link rel="stylesheet" th:href="@{/css/corporation.css}">
     <title>corporation</title>
@@ -34,7 +26,7 @@
     </div>
 
     <!-- 신규등록 form-->
-    <form action="corp_info.html" th:action method="post" name="" class="reg_form">
+    <form action="corp_info.html" th:action method="post" name="" class="reg_form" onsubmit="return corpNewCheck(this)">
         <div class="form-group row">
             <label for="corp_name" class="col-sm-2 col-form-label reg_label">기업명</label>
             <div class="col-sm-5">
@@ -53,20 +45,20 @@
                 <div class="input-group mb-4 col-8">
                     <input type="text" class="form-control form-control-sm px-3" id="corp_id" name="corp_id">
                     <div class="input-group-append">
-                        <button class="btn btn-outline-dark btn-sm px-3" type="button" id="" >중복확인</button>
+                        <button class="btn btn-outline-dark btn-sm px-3" type="button" id="id_validation" onclick="checkId()">중복확인</button>
                     </div>
                 </div>
             </div>
             <div class="form-group row">
                 <label for="corp_pw" class="col-sm-2 col-form-label reg_label">비밀번호</label>
                 <div class="col-sm-8">
-                    <input type="password" class="form-control form-control-sm" id="corp_pw" name="corp_pw">
+                    <input type="password" class="form-control form-control-sm" id="corp_pw" name="corp_pw" onchange="pw_check()">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="corp_check" class="col-sm-2 col-form-label reg_label">비밀번호 확인</label>
                 <div class="col-sm-8">
-                    <input type="password" class="form-control form-control-sm" id="corp_check" name="corp_check">
+                    <input type="password" class="form-control form-control-sm" id="corp_check" name="corp_check" onchange="pw_confirm()">
                 </div>
             </div>
             <div class="form-group row">
