--- a/ChattingApp/app/src/main/res/layout/activity_main.xml
+++ b/ChattingApp/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/main_blue"
-        tools:context=".MainActivity">
+        tools:context=".ui.MainActivity">
 
         <LinearLayout
             android:id="@+id/toolbar_division"
