--- a/ChattingApp/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/ChattingApp/app/src/main/res/menu/bottom_navigation_main.xml
@@ -13,7 +13,7 @@
         android:enabled="true"
         android:title="채팅"/>
     <item
-        android:id="@+id/action_home"
+        android:id="@+id/action_my_page"
         android:icon="@drawable/menu_selector_my_page"
         android:enabled="true"
         android:title="마이페이지"/>
