--- a/ChattingApp/app/src/main/res/layout/item_company.xml
+++ b/ChattingApp/app/src/main/res/layout/item_company.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="60dp"
     android:layout_marginLeft="10dp"
     android:layout_marginTop="20dp"
     android:layout_marginRight="10dp"
     android:orientation="horizontal"
-    android:background="@color/main_blue">
+    android:background="@drawable/item_border">
 
     <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
+        android:id="@+id/companyImg"
+        android:layout_width="25dp"
         android:layout_height="match_parent"
-        android:layout_marginEnd="15dp"
         android:layout_weight="1"
         android:contentDescription="TODO" />
 
