--- a/Web/src/main/resources/templates/chat/chat_room.html
+++ b/Web/src/main/resources/templates/chat/chat_room.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko" data-dark="false">
+
 <head>
     <meta charset="utf-=8">
     <title>Counseling Room</title>
@@ -7,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" th:src="@{/js/chat_room.js}"></script>
+    <script type="text/javascript" th:src="@{/js/poll.js}"></script>
     <link rel="stylesheet" th:href="@{/css/chat_room.css}">
 </head>
 <body>
@@ -16,12 +18,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 <script>
     $(document).ready(function() {
-        $('#input_message').on('input', function(){
-            if ($('#input_message').val()==='')
-                $('#input_send').attr("disabled", true);
-            else
-                $('#input_send').attr("disabled", false);
-        });
+
     });
 </script>
 <header class ="bg-dark text-white sticky-top">
@@ -32,7 +29,7 @@
         <h5 class="mx-3 my-3 flex-fill">
             <div class="counseler-name">허현진</div>
         </h5>
-        <button class="answer_btn mx-2">
+        <button onclick="addMessage()"class="answer_btn mx-2">
             답변완료
         </button>
     </div>
@@ -48,15 +45,15 @@
             </div>
         </div>
 
-        <div class="item mymsg">
-            <div class="box">
-                <p class="msg">안녕하세요</p>
+        <div  id="messageDiv" class="item mymsg" >
+            <div  th:if="${myMessageData}!=null" th:each="message:${myMessageData}" class="box">
+                <p class="msg" th:text="${message.msgContent}">안녕하세요</p>
                 <span class="time">오전 10:05</span>
             </div>
         </div>
 
     </div>
-
+</div>
     <form id="chat_form" class="input-group d-flex justify-content-between" >
         <input type="text" class="form-control" id="input_message" placeholder="채팅을 입력하세요."/>
         <button class="send_btn" id="input_send" onclick="msgSend()">전송</button>
