--- a/Web/src/main/resources/templates/counselor/coun_list.html
+++ b/Web/src/main/resources/templates/counselor/coun_list.html
@@ -21,6 +21,7 @@
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
             integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
             crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/nav.css}">
     <link rel="stylesheet" th:href="@{/css/corporation.css}">
     <link rel="stylesheet" th:href="@{/css/counselor.css}">
@@ -62,7 +63,7 @@
             </div>
         </div>
 
-        <table class="table table-striped">
+        <table class="table table-striped table-hover">
             <thead class="thead-dark">
             <tr>
                 <th scope="col">No</th>
@@ -74,124 +75,16 @@
                 <th scope="col">상태</th>
             </tr>
             </thead>
-            <tbody>
-            <tr>
-                <td scope="row">13</td>
-                <td>가나 소프트</td>
-                <td>달봉이</td>
-                <td>010-0000-0000</td>
-                <td>남</td>
-                <td>2021-08-01</td>
-                <td>사용 가능</td>
-            </tr>
-            <tr>
-                <td scope="row">12</td>
-                <td>가나 소프트</td>
-                <td>달봉이</td>
-                <td>010-0000-0000</td>
-                <td>남</td>
-                <td>2021-08-01</td>
-                <td>사용 가능</td>
-            </tr>
-            <tr>
-                <td scope="row">11</td>
-                <td>가나 소프트</td>
-                <td>달봉이</td>
-                <td>010-0000-0000</td>
-                <td>남</td>
-                <td>2021-08-01</td>
-                <td>사용 가능</td>
-            </tr>
-            <tr>
-                <td scope="row">10</td>
-                <td>가나 소프트</td>
-                <td>달봉이</td>
-                <td>010-0000-0000</td>
-                <td>남</td>
-                <td>2021-08-01</td>
-                <td>사용 가능</td>
-            </tr>
-            <tr>
-                <td scope="row">9</td>
-                <td>가나 소프트</td>
-                <td>달봉이</td>
-                <td>010-0000-0000</td>
-                <td>남</td>
-                <td>2021-08-01</td>
-                <td>사용 가능</td>
-            </tr>
-            <tr>
-                <td scope="row">8</td>
-                <td>가나 소프트</td>
-                <td>달봉이</td>
-                <td>010-0000-0000</td>
-                <td>남</td>
-                <td>2021-08-01</td>
-                <td>사용 가능</td>
-            </tr>
-            <tr>
-                <td scope="row">7</td>
-                <td>가나 소프트</td>
-                <td>달봉이</td>
-                <td>010-0000-0000</td>
-                <td>남</td>
-                <td>2021-08-01</td>
-                <td>사용 가능</td>
-            </tr>
-            <tr>
-                <td scope="row">6</td>
-                <td>가나 소프트</td>
-                <td>달봉이</td>
-                <td>010-0000-0000</td>
-                <td>남</td>
-                <td>2021-08-01</td>
-                <td>사용 가능</td>
-            </tr>
-            <tr>
-                <td scope="row">5</td>
-                <td>가나 소프트</td>
-                <td>달봉이</td>
-                <td>010-0000-0000</td>
-                <td>남</td>
-                <td>2021-08-01</td>
-                <td>사용 가능</td>
-            </tr>
-            <tr>
-                <td scope="row">4</td>
-                <td>가나 소프트</td>
-                <td>달봉이</td>
-                <td>010-0000-0000</td>
-                <td>남</td>
-                <td>2021-08-01</td>
-                <td>사용 가능</td>
-            </tr>
-            <tr>
-                <td scope="row">3</td>
-                <td>가나 소프트</td>
-                <td>달봉이</td>
-                <td>010-0000-0000</td>
-                <td>남</td>
-                <td>2021-08-01</td>
-                <td>사용 가능</td>
-            </tr>
-            <tr>
-                <td scope="row">2</td>
-                <td>가나 소프트</td>
-                <td>달봉이</td>
-                <td>010-0000-0000</td>
-                <td>남</td>
-                <td>2021-08-01</td>
-                <td>사용 가능</td>
-            </tr>
-            <tr>
-                <td scope="row">1</td>
-                <td>가나 소프트</td>
-                <td>달봉이</td>
-                <td>010-0000-0000</td>
-                <td>남</td>
-                <td>2021-08-01</td>
-                <td>사용 가능</td>
-            </tr>
+            <tbody >
+                <tr th:each="coun: ${couns}">
+                    <td th:text="${coun.counNo}" scope="row">13</td>
+                    <td th:text="${coun.counCorp}">가나 소프트</td>
+                    <td><a th:text="${coun.counName}" th:href="@{/counselor/{counId}(counId=${coun.counNo})}">달봉이</a></td>
+                    <td th:text="${coun.counPhone}">010-0000-0000</td>
+                    <td th:text="${coun.counGender}">남</td>
+                    <td th:text="${coun.counCreatedAt}">2021-08-01</td>
+                    <td th:text="${coun.counStatus}">사용 가능</td>
+                </tr>
             </tbody>
         </table>
 
@@ -213,7 +106,8 @@
                     </li>
                 </ul>
             </nav>
-            <button type="submit" class="btn btn-warning btn-sm px-4 new-btn">등록하기</button>
+            <button type="submit" class="btn btn-warning btn-sm px-4 new-btn"
+                    th:onclick="|location.href='@{/counselor/add}'|">등록하기</button>
         </div>
     </div>
 </main>
