--- a/Web/src/main/resources/templates/chat/chat_room.html
+++ b/Web/src/main/resources/templates/chat/chat_room.html
@@ -11,6 +11,11 @@
     <script type="text/javascript" th:src="@{/js/poll.js}"></script>
     <link rel="stylesheet" th:href="@{/css/chat_room.css}">
 </head>
+<script>
+    $(document).ready(function(){
+        checkLast();
+    });
+</script>
 <body>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- Option 2: Separate Popper and Bootstrap JS -->
@@ -33,27 +38,26 @@
 
 <div id="chat_warp">
     <div class="inner" id="messages">
-
-        <div class="item">
-            <div class="box">
-                <p class="msg">안녕하세요</p>
-                <span class="time">오전 10:05</span>
+        <div th:each="msg: ${messages}">
+<!--            <div class="item">-->
+<!--                <div class="box">-->
+<!--                    <p class="msg">안녕하세요</p>-->
+<!--                    <span class="time">오전 10:05</span>-->
+<!--                </div>-->
+<!--            </div>-->
+            <div  id="messageDiv" class="item mymsg" >
+                <div class="box">
+                    <p class="msg" th:text="${msg.content}">안녕하세요</p>
+                    <span class="time" th:text="${msg.time}">오전 10:05</span>
+                </div>
             </div>
         </div>
-
-        <div  id="messageDiv" class="item mymsg" >
-            <div  th:if="${myMessageData}!=null" th:each="message:${myMessageData}" class="box">
-                <p class="msg" th:text="${message.msgContent}">안녕하세요</p>
-                <span class="time">오전 10:05</span>
-            </div>
-        </div>
-
     </div>
 </div>
-    <form id="chat_form" class="input-group d-flex justify-content-between" >
+    <div id="chat_form" class="input-group d-flex justify-content-between" >
         <input type="text" class="form-control" id="input_message" placeholder="채팅을 입력하세요."/>
         <button class="send_btn" id="input_send" onclick="msgSend()">전송</button>
-    </form>
+    </div>
     <div class="file-upload" style="float:right">
         <label for="file-input">
             <img th:src="@{/images/drive.svg}" class="my-2 mx-1">
