--- a/Web/src/main/resources/templates/counselor/coun_new.html
+++ b/Web/src/main/resources/templates/counselor/coun_new.html
@@ -21,6 +21,8 @@
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
             integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
             crossorigin="anonymous"></script>
+    <script type="text/javascript" th:src="@{/js/coun_new.js}"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/nav.css}">
     <link rel="stylesheet" th:href="@{/css/corporation.css}">
     <link rel="stylesheet" th:href="@{/css/counselor.css}">
@@ -36,37 +38,26 @@
     </div>
 
     <!-- 신규등록 form-->
-    <form th:action method="post" name="" class="reg_form">
+    <form th:action method="post" name="" class="reg_form" onsubmit="return NewCheck(this);">
         <div class="form-group row">
             <label class="col-sm-2 col-form-label reg_label">성별</label>
             <div class="col-sm-8">
                 <div class="form-check form-check-inline" style="float:left;">
-                    <input class="form-check-input" type="radio" name="coun_gender" id="radio_male" value="coun_male" checked>
+                    <input class="form-check-input" type="radio" name="coun_gender" id="radio_male" value=0 checked>
                     <label class="form-check-label" for="radio_male">남성</label>
                 </div>
                 <div class="form-check form-check-inline" style="float:left;">
-                    <input class="form-check-input" type="radio" name="coun_gender" id="radio_female" value="coun_female">
+                    <input class="form-check-input" type="radio" name="coun_gender" id="radio_female" value=1>
                     <label class="form-check-label" for="radio_female">여성</label>
                 </div>
             </div>
         </div>
         <div class="form-group row">
-            <label class="col-sm-2 col-form-label reg_label">소속기업</label>
             <div class="col-sm-5 btn-group">
-<!--                <button class="btn btn-outline-secondary btn-sm px-5" type="button" style="float:left;">기업명</button>-->
-<!--                <button type="button" class="btn btn-outline-secondary btn-sm dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-bs-toggle="dropdown" aria-expanded="false" data-bs-reference="parent" style="float:left;">-->
-<!--                    <span class="visually-hidden">Toggle Dropdown</span>-->
-<!--                </button>-->
-<!--                <ul class="dropdown-menu" aria-labelledby="dropdownMenuReference">-->
-<!--                    <li><a class="dropdown-item" href="#">가나소프트</a></li>-->
-<!--                    <li><a class="dropdown-item" href="#">알파시티</a></li>-->
-<!--                </ul>-->
-
-                <select class="btn btn-outline-secondary btn-sm px-5" name="cars" style="float:left;">
-                    <option value="volvo">Volvo</option>
-                    <option value="saab">Saab</option>
-                    <option value="fiat">Fiat</option>
-                    <option value="audi">Audi</option>
+            <label  class="col-sm-2 mr-1 col-form-label reg_label">소속기업</label>
+                <select name="embeded_corp" class="form-group btn btn-outline-secondary btn-sm px-5"  style="float:left;">
+                    <option placeholder="기업을 선택하세요" value="volvo"  th:each="corp: ${corps}" th:text="${corp.corpName}" th:value="${corp.corpNo}">
+                    </option>
                 </select>
             </div>
         </div>
@@ -78,37 +69,37 @@
             </div>
         </div>
         <div class="form-group row">
-            <label for="coun_id" class="col-sm-2 col-form-label reg_label">아이디</label>
+            <label for="counselor_id" class="col-sm-2 col-form-label reg_label">아이디</label>
             <div class="col-sm-7">
                 <div class="input-group mb-4 col-8">
-                    <input type="text" class="form-control form-control-sm px-3" id="coun_id" name="coun_id">
+                    <input type="text" class="form-control form-control-sm px-3" id="counselor_id" name="coun_id">
                     <div class="input-group-append">
-                        <button class="btn btn-outline-dark btn-sm px-3" type="button" id="" >중복확인</button>
+                        <button class="btn btn-outline-dark btn-sm px-3" type="button" id="Validation" onclick="checkCounselorId()">중복확인</button>
                     </div>
                 </div>
             </div>
             <div class="form-group row">
-                <label for="coun_pw" class="col-sm-2 col-form-label reg_label">비밀번호</label>
+                <label for="counselor_pw" class="col-sm-2 col-form-label reg_label">비밀번호</label>
                 <div class="col-sm-8">
-                    <input type="password" class="form-control form-control-sm" id="coun_pw" name="coun_pw">
+                    <input type="password" class="form-control form-control-sm" id="counselor_pw" name="coun_pw" onchange="pw_Councheck()">
                 </div>
             </div>
             <div class="form-group row">
-                <label for="coun_check" class="col-sm-2 col-form-label reg_label">비밀번호 확인</label>
+                <label for="counselor_check" class="col-sm-2 col-form-label reg_label">비밀번호 확인</label>
                 <div class="col-sm-8">
-                    <input type="password" class="form-control form-control-sm" id="coun_check" name="coun_check">
+                    <input type="password" class="form-control form-control-sm" id="counselor_check" name="coun_check" onchange="pw_Counconfirm()">
                 </div>
             </div>
             <div class="form-group row">
-                <label for="coun_phone" class="col-sm-2 col-form-label reg_label">연락처</label>
+                <label for="counselor_phone" class="col-sm-2 col-form-label reg_label">연락처</label>
                 <div class="col-sm-8">
-                    <input type="tel" class="form-control form-control-sm" id="coun_phone">
+                    <input type="tel" class="form-control form-control-sm" name="coun_phone" id="counselor_phone">
                 </div>
             </div>
             <div class="form-group row">
-                <label for="coun_email" class="col-sm-2 col-form-label reg_label">이메일</label>
+                <label for="counselor_email" class="col-sm-2 col-form-label reg_label">이메일</label>
                 <div class="col-sm-8">
-                    <input type="email" class="form-control form-control-sm" id="coun_email">
+                    <input type="email" class="form-control form-control-sm" name="coun_email" id="counselor_email">
                 </div>
             </div>
             <div class="form-group row">
@@ -119,8 +110,8 @@
             </div>
             <br><br>
             <div class="reg_btn">
-                <button type="submit" class="btn btn-dark btn-sm px-4">등록하기</button>
-                <button type="submit" class="btn btn-warning btn-sm px-4"
+                <button  type="submit" class="btn btn-dark btn-sm px-4">등록하기</button>
+                <button type="button" class="btn btn-warning btn-sm px-4"
                         th:onclick="|location.href='@{/counselor}'|">목록으로</button>
             </div>
         </div>
