--- a/Web/src/main/resources/templates/chat/chat_list.html
+++ b/Web/src/main/resources/templates/chat/chat_list.html
@@ -22,7 +22,7 @@
                 <span class="slider round"></span>
             </label><br>
             <div class="mt-2">
-                <a class="logout" href="#" style="color:#EEB500; font-size:15px;">로그아웃</a>
+                <a class="logout" th:href="@{/auth/logout}" style="color:#EEB500; font-size:15px;">로그아웃</a>
             </div>
         </div>
     </div>
