--- a/ChattingApp/app/src/main/res/layout/activity_chat.xml
+++ b/ChattingApp/app/src/main/res/layout/activity_chat.xml
@@ -73,7 +73,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/chat_content"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" >
 
             </androidx.recyclerview.widget.RecyclerView>
 
