modify polling in multi chatRoom

--- a/Web/src/main/resources/templates/chat/chat_list.html
+++ b/Web/src/main/resources/templates/chat/chat_list.html
@@ -14,7 +14,7 @@
         <img th:src="@{/images/logo.png}" style="width:80px" href="#" alt=""/>
         <h5 class="head mb-1 mx-3 my-1 flex-fill">
             <div class="my-1" style="color:gray;font-size:15px">상담원</div>
-            <div class="mt-1">허현진</div>
+            <div class="mt-1" th:text="${counName}">허현진</div>
         </h5>
         <div>
             <label class="switch">
